--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
 
   <groupId>com.lambdaworks</groupId>
   <artifactId>scrypt</artifactId>
-  <version>1.4.0</version>
+  <version>1.4.0.XOOM</version>
 
   <packaging>jar</packaging>
 
   <name>scrypt</name>
   <description>Java implementation of scrypt</description>
-  <url>http://github.com/wg/scrypt</url>
+  <url>http://github.com/xoom/scrypt</url>
 
   <licenses>
     <license>
@@ -26,6 +26,12 @@
       <id>will</id>
       <name>Will Glozer</name>
     </developer>
+	  <developer>
+		  <id>rlubbat</id>
+		  <name>Ramsey Lubbat</name>
+		  <organization>Xoom</organization>
+		  <organizationUrl>https://www.xoom.com</organizationUrl>
+	  </developer>
   </developers>
 
   <dependencies>
@@ -124,9 +130,9 @@
   </properties>
 
   <scm>
-    <connection>scm:git:git://github.com/wg/scrypt.git</connection>
-    <developerConnection>scm:git:git://github.com/wg/scrypt.git</developerConnection>
-    <url>http://github.com/wg/scrypt</url>
+    <connection>scm:git:git://github.com/xoom/scrypt.git</connection>
+    <developerConnection>scm:git:git://github.com/xoom/scrypt.git</developerConnection>
+    <url>http://github.com/xoom/scrypt</url>
   </scm>
 
   <distributionManagement>
