--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.lambdaworks</groupId>
     <artifactId>scrypt</artifactId>
-    <version>1.4.1.XOOM-SNAPSHOT</version>
+    <version>1.4.1.XOOM</version>
 
     <packaging>jar</packaging>
 
