--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.lambdaworks</groupId>
   <artifactId>scrypt</artifactId>
-  <version>1.4.1.XOOM</version>
+  <version>1.4.0-lyndir</version>
 
   <packaging>jar</packaging>
 
